# SysGraph

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml
.qoder/quests/: system-diagnostic-tool.md
agents/: base_agent.py  hardware_agent.py  network_agent.py  system_agent.py
collectors/: __init__.py  hardware_collector.py  network_collector.py  system_collector.py
core/: __init__.py  config_manager.py  config_models.py
gui/: __init__.py
models/: __init__.py  model_manager.py
rules/: __init__.py
utils/: __init__.py
